kind of refactoring
